kubernetes-deploy.yml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: group7-deployment
  labels:
    app: group7
spec:
  replicas: 3
  selector:
    matchLabels:
      app: group7
  template:
    metadata:
      labels:
        app: group7
    spec:
      # Pod
      containers:
        - name: group7
          image: proksch/showenv # TODO: Change this to our application Docker image
          ports:
            - containerPort: 8080
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: group7-service
spec:
  selector:
    app: group7
  ports:
    - port: 8080
      targetPort: 8080 # Should match the port our pods are running on
---
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: group7-ingress
spec:
  defaultBackend:
    service:
      name: group7-service
      port:
        number: 8080 # Should match the port our service is running on
